--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-coverage==4.5.3
-croniter==0.3.30
-deprecated==1.2.5
+coverage==5.1
+croniter==0.3.32
+deprecated==1.2.10
 flask-cors==3.0.8
-flask-restplus==0.12.1
-flask==1.0.2
-gunicorn==19.9.0
-httpretty==0.9.6
+flask-restx==0.2.0
+flask==1.1.2
+gunicorn==20.0.4
+httpretty==1.0.2
 ipython
 iso8601==0.1.12
-jsonschema==3.0.1
-mongomock==3.16.0
-nose-timer==0.7.5
+jsonschema==3.2.0
+mongomock==3.19.0
+nose-timer==1.0.0
 nose==1.3.7
-pyjwt==1.6.4
-pymongo==3.8.0
-pyopenssl==19.0.0
-python-crontab==2.3.6
-requests==2.22.0
+pyjwt==1.7.1
+pymongo==3.10.1
+pyopenssl==19.1.0
+python-crontab==2.5.1
+requests==2.23.0
