--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-coverage==6.2
+coverage==6.4
 croniter==1.3.5
 deprecated==1.2.13
 flask-cors==3.0.10
 flask-restx==0.5.1
-flask==2.0.3
+flask==2.1.2
 gunicorn==20.1.0
 httpretty==1.1.4
 ipython
 iso8601==1.0.2
-jsonschema==4.0.0
+jsonschema==4.5.1
 mongomock==4.0.0
-nose-timer==1.0.1
-nose==1.3.7
 pyjwt==2.4.0
 pymongo==4.1.1
 pyopenssl==22.0.0
 python-crontab==2.6.0
 requests==2.27.1
+pytest==7.1.2
