--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.1
+      - image: cimg/python:3.10
 
     working_directory: ~/repo
 
@@ -12,8 +12,7 @@ jobs:
           name: Switch timezone to Stockholm
           command: sudo cp /usr/share/zoneinfo/Europe/Stockholm /etc/localtime
       - run: python --version
-      - run: sudo pip install --upgrade pip
       - run: pip --version
-      - run: sudo pip3 install --upgrade -r requirements.txt
-      - run: PYTHONPATH=${PWD} python3.6 /usr/local/bin/nosetests -vv --nologcapture --nocapture --with-timer ./
+      - run: pip install --upgrade -r requirements.txt
+      - run: PYTHONPATH=${PWD} pytest --verbose
 
